lab-5/canary-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: demo
  labels: 
    istio-injection: enabled
spec: {}
status: {}
