lab-5/canary-deployment/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo
spec:
  replicas: 5
  strategy:
    canary:
      trafficRouting:
        istio:
          virtualService:
            name: demo        # required
            routes:
              - primary
          destinationRule:
            name: demo   # required
            canarySubsetName: canary  # required
            stableSubsetName: stable  # required
      steps:
      - setWeight: 100
      - pause: {}  # pause indefinitely
      # - setWeight: 40
      # - pause: {duration: 10}
      # - setWeight: 60
      # - pause: {duration: 10}
      # - setWeight: 80
      # - pause: {duration: }
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: sonnguyen129/nginx-web:0.0.3
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
        livenessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/"
            port: 80
