lab-5/canary-deployment/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo
spec:
  host: demo
  subsets:
  - name: canary   # referenced in canary.trafficRouting.istio.destinationRule.canarySubsetName
  - name: stable   # referenced in canary.trafficRouting.istio.destinationRule.stableSubsetName
