lab-5/canary-deployment/gateway_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
  namespace: demo
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "demo.local"
---
# apiVersion: networking.istio.io/v1alpha3
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: demo
  namespace: demo
spec:
  hosts:
  - "demo.local"
  gateways:
  - demo-gateway
  http:
  - name: primary
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: demo
        port:
          number: 80
        subset: stable
      weight: 50
    - destination:
        host: demo
        port:
          number: 80
        subset: canary
      weight: 50
